# NumericalMethodsGSSI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exercises/: exercises2021.tex  exercises2023.tex
include/: gsl.h  timer.h  utils.h  vector3.h
plots/: my.mplstyle  plot_integration.py  plot_integration_error.py  plot_integration_montecarlo.py
pyplots/: my.mplstyle  plot_adiabatic.py  plot_advection.py  plot_advection_error.py  plot_diffusion.py  plot_diffusion_time.py  plot_galaxy.py  plot_integration_error.py  plot_lorenz.py  plot_mcmc.py  plot_ode_error.py
src/: gsl.cpp  timer.cpp  utils.cpp
src/examples/: advectedbox.cpp  galaxy.cpp  galaxy_new.cpp
src/integration/: montecarlo.cpp  trapezium_v0.cpp  trapezium_v1.cpp  trapezium_v2.cpp  trapezium_v3.cpp
src/mcmc/: isampling.cpp  meanvalue.cpp
src/misc/: diagnosing.cpp
src/ode/: lorenz.cpp  rk2.cpp
src/pde/: adiabatic.cpp  advection.cpp  advection_CN.cpp  diffusion.cpp
src/tridiag/: tridiag.cpp
